<resources>
    <string name="app_name">Money Play</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home">Lottery</string>
    <string name="title_activity_summary">Summary</string>
    <string name="title_activity_cricket_summary">Cricket History</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_single__bet">Single Bet</string>
    
    <string name="money_play_terms">Moneyplay is virtual game and involves no real money, but it satisfies your betting appetite.
Any misuse of this game will lead to legal consequences.</string>
    <string name="how_play">How to play?</string>
    <string name="play_lottery">ONE LUCKY DOUBLE DIGIT NUMBER GENARETED EVERY 15 MINUTES, YOU CAN BET ON SINGLE DIGIT FIRST, SINGLE
DIGIT SECOND AND COMBINATION OF BOTH AS JODI AND WIN CHIPS.THERE IS CHART TO HELP YOU…!!</string>

    <string name="cricket_play">IN CRICKET YOU HAVE DIFFERENT GAMES YOU CAN PLAY.</string>

<string name="match"><b>MATCH WIN LOSS</b> – PREDICT THE WINNING TEAM AND BET CHIPS ON IT.

THIS GAME CLOSES BEFORE MATCH.</string>

<string name="toss"><b>TOSS</b> – PREDICT THE TOSS AND BET CHIPS ON IT.

THIS GAME CLOSES BEFORE TOSS.</string>

<string name="frst_ball"><b>1ST BALL GAME FOR BOTH TEAMS</b> – PREDICT WHAT HAPPENS ON 1ST BALL AND BET CHIPS ON IT.

THIS GAME CLOSES BEFORE INNINGS START.</string>

<string name="oversrun"><b>1ST OVER RUNS FOR BOTH TEAMS</b> – PREDICT 1ST OVER RUNS AND BET CHIPS ON IT.

THIS GAME CLOSES BEFORE INNINGS START.</string>

<string name="overses"><b>10 OVER SESSION FOR BOTH TEAMS</b> – PREDICT TEAM SCORE IN 1ST 10 OVERS AND BET CHIPS ON IT.

THIS GAME CLOSES IN 6 OVERS OF THE INNINGS.</string>

<string name="wckt"><b>1ST WICKET METOD FOR BOTH TEAMS</b> – PREDICT THE METHOD OF THE 1ST WICKET AND BET CHIPS ON IT.

THIS GAME CLOSES BEFORE START OF AN INNINGS.</string>

<string name="runs"><b>RUNS AT 1ST WICKET FALL FOR BOTH TEAMS</b> – PREDICT THE OPENING PARTNERSHIP AND BET CHIPS ON IT.

THIS GAME WILL CLOSE BEFORE INNINGS START.</string>

<string name="innings"><b>INNINGS RUN RATE</b> – PREDICT INNINGS RUN RATE AND BET CHIPS ON IT.

THIS GAME WILL CLOSE IN MID INNINGS.</string>

<string name="highest"><b>HIGHEST OPENING PARTNERSHIP</b> – PREDICT WHICH TEAM SCORES HIGHEST OPENING PARTNERSHIP AND BET CHIPS ON

IT. THIS GAME WILL CLOSE BEFORE MATCH START</string>

<string name="race"><b>RACE TO FIFTY</b> – PREDICT WHICH TEAM SCORES 50 RUNS FIRST AND BET CHIPS ON IT.

THIS GAME WILL CLOSE BEFORE MATCH START.</string>

    <string name="make30"><b>TO MAKE 30</b> – PREDICT HOW MANY PLAYERS WILL SCORE BETWEEN 30 TO 49 AND BET CHIPS ON IT

    THIS GAME WILL CLOSE BEFORE INNINGS START</string>

    <string name="make50"><b>TO MAKE 50</b> – PREDICT HOW MANY PLAYERS WILL SCORE BETWEEN 50 TO 99 AND BET CHIPS ON IT

    THIS GAME WILL CLOSE BEFORE INNINGS START</string>

    <string name="make100"><b>TO MAKE 100</b> – PREDICT HOW MANY PLAYERS WILL SCORE CENTURY AND BET CHIPS ON IT

    THIS GAME WILL CLOSE BEFORE INNINGS START</string>

    <string name="innrun"><b>INNINGS RUNS</b> -PRDICT  TOTAL  INNINGS RUNS FOR BOTH TEAMS AND BET CHIPS ON IT

    THIS GAME WILL CLOSE IN MID INNINGS.</string>

    <string name="cncl">IF MATCH IS ABANDONED OR CANCELLED THE CHIPS WILL BE CREDITED BACK TO PLAYER.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="login_res_2">2</string>
    <string name="login_res_0">0</string>
    <string name="Lottery">Lottery</string>
    <string name="Cricket">Cricket</string>
    <!--button string-->
    <string name="place_bet">Place Bet</string>
    <string name="first_digit">Single Digit 1st</string>
    <string name="second_digit">Single Digit 2nd</string>
    <string name="jodi_digit">Jodi</string>

    <string name="internet_err">Internet connection not present!!!</string>
    <string name="invalid_user">You are not valid user</string>
    <string name="invalid_username_pass">Invalid username or password</string>
    <string name="title_activity_match_details">Match Details</string>
    <string name="prefrence">UserPrefrence</string>
    <string name="title_activity_table_main">TableMain</string>
    <string name="title_activity_landing_screen">LandingScreen</string>
    <string name="title_activity_result_chart">Chart</string>

    <!--Api Urls-->
    <!--login api
    <string name="login">http://lottery.pixmadness.in/api/players/login</string>
    &lt;!&ndash;pacebetseconde url&ndash;&gt;
    <string name="PlaceBetFirst"> http://lottery.pixmadness.in/api/bets/PlaceBetFirst</string>

  &lt;!&ndash;pacebetseconde url&ndash;&gt;
    <string name="PlaceBetSecond"> http://lottery.pixmadness.in/api/bets/PlaceBetSecond</string>

  &lt;!&ndash;pacebetseconde url&ndash;&gt;
    <string name="PlaceBetJodi">http://lottery.pixmadness.in/api/bets/PlaceBetJodi</string>
&lt;!&ndash;cancel bet&ndash;&gt;
    <string name="cancel_bet">http://lottery.pixmadness.in/api/bets/cancelbet</string>
 &lt;!&ndash;get profile&ndash;&gt;
    <string name="get_profile">http://lottery.pixmadness.in/api/players/player/</string>
 &lt;!&ndash;get result   &ndash;&gt;
    <string name="get_result">http://lottery.pixmadness.in/api/bets/LuckyNumber</string>

  <string name="get_today_history">http://lottery.pixmadness.in/api/players/playerhistory?player_id=</string>

&lt;!&ndash;get chart&ndash;&gt;
    <string name="get_chart">http://lottery.pixmadness.in/api/bets/luckyNumberchart?month=</string>

&lt;!&ndash;current result    &ndash;&gt;
    <string name="get_current_result">http://lottery.pixmadness.in/api/bets/getServerTimings</string>-->


    <!--Live URL's   -->
<!--46.101.6.171/moneygame-->
    <!--login api-->
    <string name="login">http://moneygame.sigmasoftsolutions.in/api/players/login</string>

    <!-- Get Present Amount-->
    <string name="url_amount">http://moneygame.sigmasoftsolutions.in/api/players/player/</string>

    <!--pacebetseconde url-->
    <string name="PlaceBetFirst">http://moneygame.sigmasoftsolutions.in/api/bets/PlaceBetFirst</string>

    <!--pacebetseconde url-->
    <string name="PlaceBetSecond">http://moneygame.sigmasoftsolutions.in/api/bets/PlaceBetSecond</string>

    <!--pacebetseconde url-->
    <string name="PlaceBetJodi">http://moneygame.sigmasoftsolutions.in/api/bets/PlaceBetJodi</string>
    <!--cancel bet-->
    <string name="cancel_bet">http://moneygame.sigmasoftsolutions.in/api/bets/cancelbet</string>
    <!--get profile-->
    <string name="get_profile">http://moneygame.sigmasoftsolutions.in/api/players/player/</string>
    <!--get result   -->
    <string name="get_result">http://moneygame.sigmasoftsolutions.in/api/bets/LuckyNumber</string>

    <string name="get_today_history">http://moneygame.sigmasoftsolutions.in/api/players/playerhistory?player_id=</string>

    <string name="get_history_by_week">http://moneygame.sigmasoftsolutions.in/api/players/accountsPlayerByWeek?player_id=</string>

    <!--get chart-->
    <string name="get_chart">http://moneygame.sigmasoftsolutions.in/api/bets/LuckyNumberChart?month=</string>

    <!--current result    -->
    <string name="get_current_result">http://moneygame.sigmasoftsolutions.in/api/bets/getServerTimings</string>

    <!--get account detail by date-->
    <string name="get_acc_by_date">http://moneygame.sigmasoftsolutions.in/api/players/accountsPlayerByDate?player_id=</string>

    <!--get transaction -->
    <string name="get_transaction">http://moneygame.sigmasoftsolutions.in/api/players/accountsPlayerByDrawTime?player_id=</string>
    <!--get specific transaction-->
    <string name="get_specific_transaction">http://moneygame.sigmasoftsolutions.in/api/players/accountsPlayerByTransactionId?transaction_id=</string>

    <!-- Cricket URLS-->
    <!-- Get cricket match list-->
    <string name="get_match_list">http://moneygame.sigmasoftsolutions.in/api/cricket/getCricketMatchList</string>
    <string name="get_match_details">http://moneygame.sigmasoftsolutions.in/api/cricket/getCricketMatchDetails</string>
    <string name="get_match_odds">http://moneygame.sigmasoftsolutions.in/api/cricket/getCricketMatchDetailsWithOdds</string>
    <string name="place_cricket_bet">http://moneygame.sigmasoftsolutions.in/api/cricket/placeCricketMatchBet</string>
    <string name="get_cricket_odds_with_id">http://moneygame.sigmasoftsolutions.in/api/cricket/getCricketOddsWithMatchId</string>
    <string name="cancel_cricket_bet">http://moneygame.sigmasoftsolutions.in/api/cricket/cancelCricketBet</string>
    <string name="live_score">http://moneygame.sigmasoftsolutions.in/api/cricket/getMatchLiveScore?match_id=</string>
    <string name="cricket_account">http://moneygame.sigmasoftsolutions.in/api/cricket/accountsPlayerByWeek?player_id=</string>
    <string name="cricket_daily">http://moneygame.sigmasoftsolutions.in/api/cricket/accountsPlayerByDate?player_id=</string>
    <string name="match_wise">http://moneygame.sigmasoftsolutions.in/api/cricket/accountsPlayerBymatch?player_id=</string>
    <string name="game_wise">http://moneygame.sigmasoftsolutions.in/api/cricket/accountsPlayerBygame?player_id=</string>
    <string name="cricket_transaction_details">http://moneygame.sigmasoftsolutions.in/api/cricket/accountsPlayerByTransactionId?transaction_id=</string>
    <string name="score_card">http://moneygame.sigmasoftsolutions.in/api/cricket/getMatchLiveScoreCard?match_id=</string>
    <string name="match_result">http://moneygame.sigmasoftsolutions.in/api/cricket/getMatchResults?match_id=</string>
    <string name="cancelled_bets">http://moneygame.sigmasoftsolutions.in/api/cricket/getUserCancelledBets?player_id=</string>

    <!--Password change-->
    <string name="password_chng">http://moneygame.sigmasoftsolutions.in/api/players/changePassword</string>

    <string name="title_activity_tansaction_wise_history">Transaction History</string>
    <string name="title_activity_transaction_indetail">Transaction Details</string>
    <string name="title_activity_notification_">Notification</string>
    <string name="title_activity_main_page">Cricket</string>
    <string name="title_activity_play_details">Play Details</string>
    <string name="title_activity_more_games">More Games</string>
    <string name="title_activity_game_type_details">Game Type Details</string>
    <string name="title_activity_screen_slide">Cricket Games</string>
    <string name="title_activity_cricket_transaction">Cricket Transaction</string>
    <string name="title_activity_upcoming_list">Upcoming List</string>
    <string name="title_activity_match_score_card">MatchScoreCard</string>
    <string name="title_activity_container_score_card">Score Card</string>
    <string name="title_activity_redsult_details">Result Details</string>
    <string name="title_activity_cricket_transaction_details">Transaction List</string>
    <!--http://moneygame.sigmasoftsolutions.in/-->
</resources>
