<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#dedede"
    android:padding="5dp"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    tools:context="bidding.example.com.bidding.TermAndCondition">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/money_play_terms"
        android:textColor="@color/textColor"
        android:background="#fff"
        android:textSize="16sp"
        android:gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/how_play"
        android:textColor="#fff"
        android:background="#3b5998"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        android:gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/cricket_play"
        android:textColor="@color/textColor"
        android:background="#fff"
        android:textSize="16sp"
        android:gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/match"
        android:textColor="@color/textColor"
        android:background="#fff"
        android:textSize="16sp"
        android:gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/toss"
        android:textColor="@color/textColor"
        android:background="#fff"
        android:textSize="16sp"
        android:gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/frst_ball"
        android:textColor="@color/textColor"
        android:background="#fff"
        android:textSize="16sp"
        android:gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/oversrun"
        android:textColor="@color/textColor"
        android:background="#fff"
        android:textSize="16sp"
        android:gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/overses"
        android:textColor="@color/textColor"
        android:background="#fff"
        android:textSize="16sp"
        android:gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/wckt"
        android:textColor="@color/textColor"
        android:background="#fff"
        android:textSize="16sp"
        android:gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/runs"
        android:textColor="@color/textColor"
        android:background="#fff"
        android:textSize="16sp"
        android:gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/innings"
        android:textColor="@color/textColor"
        android:background="#fff"
        android:textSize="16sp"
        android:gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/highest"
        android:textColor="@color/textColor"
        android:background="#fff"
        android:textSize="16sp"
        android:gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/race"
        android:textColor="@color/textColor"
        android:background="#fff"
        android:textSize="16sp"
        android:gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/make30"
        android:textColor="@color/textColor"
        android:background="#fff"
        android:textSize="16sp"
        android:gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/make50"
            android:textColor="@color/textColor"
            android:background="#fff"
            android:textSize="16sp"
            android:gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/make100"
            android:textColor="@color/textColor"
            android:background="#fff"
            android:textSize="16sp"
            android:gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/innrun"
            android:textColor="@color/textColor"
            android:background="#fff"
            android:textSize="16sp"
            android:gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/cncl"
            android:textColor="@color/textColor"
            android:background="#fff"
            android:textSize="16sp"
            android:gravity="center"/>

    </LinearLayout>
</ScrollView>
